--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -11,7 +11,39 @@ entries:
               url: https://github.com/ollama/ollama/releases/tag/v0.4.0
     apiVersion: v2
     appVersion: 0.4.0
-    created: "2024-11-14T09:31:11.8710645+01:00"
+    created: "2024-11-14T15:48:18.3302454+01:00"
+    description: Get up and running with large language models locally.
+    digest: c65b53d26f1195b33cb6713fb2e24dd98abd88f25f07b1e363cd32f913776573
+    home: https://ollama.ai/
+    icon: https://ollama.ai/public/ollama.png
+    keywords:
+    - ai
+    - llm
+    - llama
+    - mistral
+    kubeVersion: ^1.16.0-0
+    maintainers:
+    - email: contact@otwld.com
+      name: OTWLD
+    name: ollama
+    sources:
+    - https://github.com/ollama/ollama
+    - https://github.com/otwld/ollama-helm
+    type: application
+    urls:
+    - https://mbtraore.github.io/prd-open-webui/ollama-0.64.0.tgz
+    version: 0.64.0
+  - annotations:
+      artifacthub.io/category: ai-machine-learning
+      artifacthub.io/changes: |
+        - kind: changed
+          description: upgrade app version to 0.4.0
+          links:
+            - name: Ollama release v0.4.0
+              url: https://github.com/ollama/ollama/releases/tag/v0.4.0
+    apiVersion: v2
+    appVersion: 0.4.0
+    created: "2024-11-14T15:48:18.3391456+01:00"
     description: Get up and running with large language models locally.
     digest: c65b53d26f1195b33cb6713fb2e24dd98abd88f25f07b1e363cd32f913776573
     home: https://ollama.ai/
@@ -38,7 +70,7 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: 0.3.35
-    created: "2024-11-14T09:31:11.8698966+01:00"
+    created: "2024-11-14T15:48:18.3340435+01:00"
     dependencies:
     - condition: ollama.enabled
       import-values:
@@ -76,12 +108,74 @@ entries:
     urls:
     - https://mbtraore.github.io/prd-open-webui/open-webui-3.6.0.tgz
     version: 3.6.0
+  - annotations:
+      licenses: MIT
+    apiVersion: v2
+    appVersion: 0.3.35
+    created: "2024-11-14T15:48:18.3424027+01:00"
+    dependencies:
+    - condition: ollama.enabled
+      import-values:
+      - child: service
+        parent: ollama.service
+      name: ollama
+      repository: https://otwld.github.io/ollama-helm/
+      version: '>=0.24.0'
+    - condition: pipelines.enabled
+      import-values:
+      - child: service
+        parent: pipelines.service
+      name: pipelines
+      repository: https://helm.openwebui.com
+      version: '>=0.0.1'
+    - condition: tika.enabled
+      name: tika
+      repository: https://apache.jfrog.io/artifactory/tika
+      version: '>=2.9.0'
+    description: "Open WebUI: A User-Friendly Web Interface for Chat Interactions
+      \U0001F44B"
+    digest: 8787bf54cf6c25e4038d7b0836d10bd163cee2049f5708d22580c8d868f41df7
+    home: https://www.openwebui.com/
+    icon: https://raw.githubusercontent.com/open-webui/open-webui/main/static/favicon.png
+    keywords:
+    - llm
+    - chat
+    - web-ui
+    name: open-webui
+    sources:
+    - https://github.com/open-webui/helm-charts
+    - https://github.com/open-webui/open-webui/pkgs/container/open-webui
+    - https://github.com/otwld/ollama-helm/
+    - https://hub.docker.com/r/ollama/ollama
+    urls:
+    - https://mbtraore.github.io/prd-open-webui/charts/open-webui-3.6.0.tgz
+    version: 3.6.0
   pipelines:
   - annotations:
       licenses: MIT
     apiVersion: v2
     appVersion: alpha
-    created: "2024-11-14T09:31:11.8716343+01:00"
+    created: "2024-11-14T15:48:18.3346985+01:00"
+    description: 'Pipelines: UI-Agnostic OpenAI API Plugin Framework'
+    digest: 4e9938b436d413acaeba6fb3f572354acf477480db2c53e72267028c23eeb292
+    home: https://github.com/open-webui/pipelines
+    icon: https://github.com/open-webui/pipelines/raw/main/header.png
+    keywords:
+    - llm
+    - chat
+    - web-ui
+    name: pipelines
+    sources:
+    - https://github.com/open-webui/helm-charts
+    - https://github.com/open-webui/pipelines/pkgs/container/pipelines
+    urls:
+    - https://mbtraore.github.io/prd-open-webui/pipelines-0.0.4.tgz
+    version: 0.0.4
+  - annotations:
+      licenses: MIT
+    apiVersion: v2
+    appVersion: alpha
+    created: "2024-11-14T15:48:18.3430235+01:00"
     description: 'Pipelines: UI-Agnostic OpenAI API Plugin Framework'
     digest: 4e9938b436d413acaeba6fb3f572354acf477480db2c53e72267028c23eeb292
     home: https://github.com/open-webui/pipelines
@@ -100,7 +194,39 @@ entries:
   tika:
   - apiVersion: v2
     appVersion: 2.9.0.0
-    created: "2024-11-14T09:31:11.8728085+01:00"
+    created: "2024-11-14T15:48:18.3377208+01:00"
+    description: The official Helm chart to deploy Apache Tika on Kubernetes
+    digest: ca9fa418bcb83afc1b340d90563bedc71a83a6434a2c7c528ddaba284a55c427
+    home: https://tika.apache.org
+    icon: https://tika.apache.org/tika.png
+    keywords:
+    - apache
+    - tika
+    - apache-tika
+    - tika-helm
+    maintainers:
+    - email: lewismc@apache.org
+      name: lewismc
+      url: https://github.com/lewismc
+    - name: stijnbrouwers
+      url: https://github.com/stijnbrouwers
+    - name: philipsoutham
+      url: https://github.com/philipsoutham
+    - name: frascu
+      url: https://github.com/frascu
+    - name: euven
+      url: https://github.com/euven
+    name: tika
+    sources:
+    - https://github.com/apache/tika
+    - https://github.com/apache/tika-helm
+    type: application
+    urls:
+    - https://mbtraore.github.io/prd-open-webui/tika-2.9.0.tgz
+    version: 2.9.0
+  - apiVersion: v2
+    appVersion: 2.9.0.0
+    created: "2024-11-14T15:48:18.3456291+01:00"
     description: The official Helm chart to deploy Apache Tika on Kubernetes
     digest: ca9fa418bcb83afc1b340d90563bedc71a83a6434a2c7c528ddaba284a55c427
     home: https://tika.apache.org
@@ -130,4 +256,4 @@ entries:
     urls:
     - https://mbtraore.github.io/prd-open-webui/charts/tika-2.9.0.tgz
     version: 2.9.0
-generated: "2024-11-14T09:31:11.8653286+01:00"
+generated: "2024-11-14T15:48:18.3278486+01:00"
