--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -11,7 +11,39 @@ entries:
               url: https://github.com/ollama/ollama/releases/tag/v0.4.0
     apiVersion: v2
     appVersion: 0.4.0
-    created: "2024-11-14T16:20:06.2889832+01:00"
+    created: "2024-11-14T16:48:16.7224261+01:00"
+    description: Get up and running with large language models locally.
+    digest: c65b53d26f1195b33cb6713fb2e24dd98abd88f25f07b1e363cd32f913776573
+    home: https://ollama.ai/
+    icon: https://ollama.ai/public/ollama.png
+    keywords:
+    - ai
+    - llm
+    - llama
+    - mistral
+    kubeVersion: ^1.16.0-0
+    maintainers:
+    - email: contact@otwld.com
+      name: OTWLD
+    name: ollama
+    sources:
+    - https://github.com/ollama/ollama
+    - https://github.com/otwld/ollama-helm
+    type: application
+    urls:
+    - https://mbtraore.github.io/prd-open-webui/ollama-0.64.0.tgz
+    version: 0.64.0
+  - annotations:
+      artifacthub.io/category: ai-machine-learning
+      artifacthub.io/changes: |
+        - kind: changed
+          description: upgrade app version to 0.4.0
+          links:
+            - name: Ollama release v0.4.0
+              url: https://github.com/ollama/ollama/releases/tag/v0.4.0
+    apiVersion: v2
+    appVersion: 0.4.0
+    created: "2024-11-14T16:48:16.734524+01:00"
     description: Get up and running with large language models locally.
     digest: c65b53d26f1195b33cb6713fb2e24dd98abd88f25f07b1e363cd32f913776573
     home: https://ollama.ai/
@@ -38,7 +70,7 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: 0.3.35
-    created: "2024-11-14T16:20:06.2832975+01:00"
+    created: "2024-11-14T16:48:16.7298793+01:00"
     dependencies:
     - condition: ollama.enabled
       import-values:
@@ -60,7 +92,7 @@ entries:
       version: '>=2.9.0'
     description: "Open WebUI: A User-Friendly Web Interface for Chat Interactions
       \U0001F44B"
-    digest: f799a1a2a3e5fd9ffe0dc67606dae851b73d362bcd5bf7d60de72dac2e6c72ba
+    digest: 7c6f6f4c7ed196ab28f3237783a3f2d6ded2b8fa6bc2baa7fcf059d78093b81e
     home: https://www.openwebui.com/
     icon: https://raw.githubusercontent.com/open-webui/open-webui/main/static/favicon.png
     keywords:
@@ -81,9 +113,29 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: alpha
-    created: "2024-11-14T16:20:06.2897201+01:00"
+    created: "2024-11-14T16:48:16.7306172+01:00"
     description: 'Pipelines: UI-Agnostic OpenAI API Plugin Framework'
-    digest: dff87d3139f98f5c76906188fdc5d2c055680be7fb17352be89203ce9924cf49
+    digest: 119e52e6844ae9d30d859216474d017bd4d22b3dff55d2f01a92ef1ab712295b
+    home: https://github.com/open-webui/pipelines
+    icon: https://github.com/open-webui/pipelines/raw/main/header.png
+    keywords:
+    - llm
+    - chat
+    - web-ui
+    name: pipelines
+    sources:
+    - https://github.com/open-webui/helm-charts
+    - https://github.com/open-webui/pipelines/pkgs/container/pipelines
+    urls:
+    - https://mbtraore.github.io/prd-open-webui/pipelines-0.0.4.tgz
+    version: 0.0.4
+  - annotations:
+      licenses: MIT
+    apiVersion: v2
+    appVersion: alpha
+    created: "2024-11-14T16:48:16.7351711+01:00"
+    description: 'Pipelines: UI-Agnostic OpenAI API Plugin Framework'
+    digest: 119e52e6844ae9d30d859216474d017bd4d22b3dff55d2f01a92ef1ab712295b
     home: https://github.com/open-webui/pipelines
     icon: https://github.com/open-webui/pipelines/raw/main/header.png
     keywords:
@@ -100,7 +152,7 @@ entries:
   tika:
   - apiVersion: v2
     appVersion: 2.9.0.0
-    created: "2024-11-14T16:20:06.2870812+01:00"
+    created: "2024-11-14T16:48:16.7326689+01:00"
     description: The official Helm chart to deploy Apache Tika on Kubernetes
     digest: ca9fa418bcb83afc1b340d90563bedc71a83a6434a2c7c528ddaba284a55c427
     home: https://tika.apache.org
@@ -132,7 +184,7 @@ entries:
     version: 2.9.0
   - apiVersion: v2
     appVersion: 2.9.0.0
-    created: "2024-11-14T16:20:06.2912271+01:00"
+    created: "2024-11-14T16:48:16.7369515+01:00"
     description: The official Helm chart to deploy Apache Tika on Kubernetes
     digest: ca9fa418bcb83afc1b340d90563bedc71a83a6434a2c7c528ddaba284a55c427
     home: https://tika.apache.org
@@ -162,4 +214,4 @@ entries:
     urls:
     - https://mbtraore.github.io/prd-open-webui/charts/tika-2.9.0.tgz
     version: 2.9.0
-generated: "2024-11-14T16:20:06.2782445+01:00"
+generated: "2024-11-14T16:48:16.7208679+01:00"
